<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_patients">

    <fragment
        android:id="@+id/navigation_patients"
        android:name="com.schlafenhase.pandemica.ui.home.HomeFragment"
        android:label="@string/title_patients"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/navigation_home_second" />
    </fragment>
    <fragment
            android:id="@+id/navigation_home_second"
            android:name="com.schlafenhase.pandemica.ui.home.HomeSecondFragment"
            android:label="@string/home_second"
            tools:layout="@layout/fragment_home_second">
        <action
                android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
                app:destination="@id/navigation_patients"/>

        <argument
                android:name="myArg"
                app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.schlafenhase.pandemica.ui.reports.ReportsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.schlafenhase.pandemica.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>