<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:onClick="signInClick">

    <Button
        android:id="@+id/signInButton"
        android:layout_width="169dp"
        android:layout_height="60dp"
        android:layout_marginBottom="99dp"
        android:background="@drawable/button_background"
        android:drawableStart="@drawable/ic_rightarrowicon"
        android:fontFamily="@font/avenir_black"
        android:onClick="signInClick"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_entry" />

    <EditText
        android:id="@+id/email_entry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="33dp"
        android:autofillHints="email"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/health_center_icon" />

    <EditText
        android:id="@+id/password_entry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="49dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_entry" />

    <ImageView
        android:id="@+id/pandemica_logo"
        android:layout_width="178dp"
        android:layout_height="0dp"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/pandemica_icon"
        app:layout_constraintBottom_toBottomOf="@+id/pandemica_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_pandemica_icon" />

    <TextView
        android:id="@+id/pandemica_label"
        android:layout_width="197dp"
        android:layout_height="0dp"
        android:layout_marginTop="260dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/pandemica"
        android:fontFamily="@font/avenir_book"
        android:text="@string/pandemica_label"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/health_center_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/health_center_label"
        android:layout_width="157dp"
        android:layout_height="0dp"
        android:layout_marginStart="113dp"
        android:layout_marginEnd="114dp"
        android:contentDescription="@string/health_center_label"
        android:fontFamily="@font/avenir_book"
        android:gravity="center"
        android:text="@string/health_center_label"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/health_center_icon"
        app:layout_constraintEnd_toEndOf="@+id/email_entry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/health_center_icon" />

    <ImageView
        android:id="@+id/health_center_icon"
        android:layout_width="41dp"
        android:layout_height="0dp"
        android:layout_marginBottom="39dp"
        android:contentDescription="@string/health_center_icon"
        app:layout_constraintBottom_toTopOf="@+id/email_entry"
        app:layout_constraintEnd_toEndOf="@+id/pandemica_label"
        app:layout_constraintTop_toBottomOf="@+id/pandemica_label"
        app:srcCompat="@drawable/health_center_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>